[gd_scene load_steps=2 format=3 uid="uid://b0q36us3uuimq"]

[ext_resource type="Script" path="res://addons/escoria-core/game/scenes/esc_prompt/esc_prompt_popup.gd" id="1"]

[node name="esc_prompt_popup" type="Window"]
position = Vector2i(0, 36)
size = Vector2i(500, 300)
visible = false
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="past_actions" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false
wrap_mode = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="command" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
caret_blink = true

[connection signal="about_to_popup" from="." to="." method="_on_esc_prompt_popup_about_to_show"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_submitted" from="VBoxContainer/command" to="." method="_on_command_text_entered"]
